# dotfiles

./: .gitattributes  init.sh  readme.md
drip/: Cargo.toml
drip/src/: bundle.rs  diff.rs  lib.rs  main.rs  parse.rs
recipe/: recipe.kdl
recipe/git/: .gitconfig
recipe/neovim/: init.vim
recipe/vscode/: extension.txt  settings.json
