[package]
name = "drip"
version = "0.1.0"
authors = ["Nico Dinata <nicodnt@icloud.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
knuffel = "3.2.0"
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.52"
