[package]
name = "drip"
version = "0.1.0"
authors = ["Nico Dinata <nicodnt@icloud.com>"]
edition = "2021"
homepage = "https://github.com/ndinata/dotfiles"
license = "MIT"
publish = false
repository = "https://github.com/ndinata/dotfiles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
knuffel = "3.2.0"
miette = { version = "5.10.0", features = ["fancy"] }
simple-home-dir = { version = "0.2.1", features = ["expand_tilde"] }
thiserror = "1.0.52"
